Fix mobile layout issues on smallest size screens...
This patch version bump (`0.3.5` => `0.3.6`) fixes some layout issues in devices
that have extra small screen-sizes.

The main h2 and h3 elements (over the main graphic at page top) and
h5.typography__footer-heading element were overflowing past the body/html
elements causing horizontal scrolling.

footer-headings that are longer than 25 chars get a class that reduces the
font-size of the heading so that it fits.

--- a/assets/scss/1-base/_html.scss
+++ b/assets/scss/1-base/_html.scss
@@ -1,4 +1,8 @@
-
+// HTML and BODY element style rules
 html {
   background-color: $color-grey-bg;
+}
+
+body {
+  overflow-x: hidden;
 }
