--- a/assets/scss/1-base/_typography.scss
+++ b/assets/scss/1-base/_typography.scss
@@ -86,6 +86,29 @@ body {
   }
 }
 
+.typography__footer-heading--long {
+  font-size: 1.75rem;
+}
+
+@media screen and (min-width: 360px) {
+  .typography__footer-heading--long {
+      font-size:1.75rem
+  }
+}
+
+@media screen and (min-width: 375px) {
+  .typography__footer-heading--long {
+      font-size:2rem
+  }
+}
+
+@media screen and (min-width: 410px) {
+  .typography__footer-heading--long {
+      font-size:2.2rem
+  }
+}
+
+
 // Content Headings
 .typography__h2 {
   color: $color-grey-heading;
@@ -160,7 +183,7 @@ h1 sup, h2 sup, h3 sup, h4 sup, h5 sup, h6 sup { // Make superscripts within hea
 .typography__register--h2 {
   color: $white;
   font-family: eurostile, sans-serif;
-  font-size: 2.4rem;
+  font-size: 2rem;
   font-weight: $font-weight-boldish;
   letter-spacing: .03rem;
   position: relative;
@@ -168,34 +191,40 @@ h1 sup, h2 sup, h3 sup, h4 sup, h5 sup, h6 sup { // Make superscripts within hea
   margin-bottom: -10px;
 }
 
+@media screen and (min-width: 360px) {
+  .typography__register--h2 {
+      font-size:2.2rem
+  }
+}
+
 @media screen and (min-width: 400px) {
   .typography__register--h2 {
-    font-size: 3rem;
+      font-size:2.4rem
   }
 }
 
 @media screen and (min-width: 768px) {
   .typography__register--h2 {
-    font-size: 5.2rem;
+      font-size:4rem
   }
 }
 
 @media screen and (min-width: 1200px) {
   .typography__register--h2 {
-    font-size: 6rem;
+      font-size: 4.5rem;
   }
 }
 
 @media screen and (min-width: 1800px) {
   .typography__register--h2 {
-    font-size: 6.6rem;
+      font-size:6.6rem
   }
 }
 
 .typography__register--h3 {
   color: $white;
   font-family: eurostile, sans-serif;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: $font-weight-boldish;
   letter-spacing: .03rem;
   position: relative;
@@ -204,7 +233,7 @@ h1 sup, h2 sup, h3 sup, h4 sup, h5 sup, h6 sup { // Make superscripts within hea
 
 @media screen and (min-width: 400px) {
   .typography__register--h3 {
-    font-size: 1.45rem;
+    font-size: 1.6rem;
     top: 30.5%;
   }
 }
